// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parenthesized.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
<span>{{(a||          b)}} {{z&&(a&&b)}}</span>
</template>

=====================================output=====================================
<template>
  <span>{{ a || b }} {{ z && a && b }}</span>
</template>

================================================================================
`;

exports[`template.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <root>
<div class="red">
    We are going to add this simple card here
  </div>
  <div class="red">
    What is going on {{ prop1 }} and {{ prop2 }}
  </div>
  </root>
</template>

=====================================output=====================================
<template>
  <root>
    <div class="red">We are going to add this simple card here</div>
    <div class="red">What is going on {{ prop1 }} and {{ prop2 }}</div>
  </root>
</template>

================================================================================
`;
